Fix center-element class to center
center-element was off center, changed 'vw' to % for left property

--- a/css/customstyle.css
+++ b/css/customstyle.css
@@ -10,7 +10,7 @@ textarea {
 
 .center-element{ 
 position: absolute;
-left: 50vw;
+left: 50%;
 top: 50vh;
 transform: translate(-50%, -50%);
 }
